[PINS] Add genl_packet kernel module for PINS packet ins
- Add genl_packet kernel module
- Extend bcm-knet-cb to support genl_packet packets
- Include kernel module in barefoot and broadcom images
- Update copp_cfg file with packet in queue configuration

Submission containing materials of a third party:
    Copyright Google LLC; Licensed under Apache 2.0 and GPL v2

Co-authored-by: Vivek Ramamoorthy <vivekmoorthy@google.com>
Co-authored-by: Srikishen Pondicherry Shanmugam <kishanps@google.com>
Co-authored-by: Yilan Ji <yilanji@google.com>
Co-authored-by: Brian O'Connor <bocon@opennetworking.org>

Signed-off-by: Brian O'Connor <bocon@opennetworking.org>

--- a/platform/broadcom/saibcm-modules/systems/linux/user/common/Makefile
+++ b/platform/broadcom/saibcm-modules/systems/linux/user/common/Makefile
@@ -195,6 +195,11 @@ ADD_TO_CFLAGS += -I$(SDK)/systems/bde/linux/include
 # Use raw IOCTL for KNET
 ADD_TO_CFLAGS += -DPROXY_SUPPORT=0
 
+# Generic packet in support using genetlink
+ifdef BUILD_GENL_PACKET
+ADD_TO_CFLAGS += -DGENL_PACKET_SUPPORT
+endif
+
 CFLAGS += $(ADD_TO_CFLAGS)
 
 #SAI_FIXUP
