--- a/platform/broadcom/saibcm-modules/systems/linux/kernel/modules/knet-cb/Makefile
+++ b/platform/broadcom/saibcm-modules/systems/linux/kernel/modules/knet-cb/Makefile
@@ -51,6 +51,9 @@ KBUILD_EXTRA_SYMBOLS := ${BLDDIR}/../bcm-knet/kernel_module/Module.symvers
 ifeq ($(BUILD_PSAMPLE),1)
 KBUILD_EXTRA_SYMBOLS += ${BLDDIR}/../psample/kernel_module/Module.symvers
 endif
+ifdef BUILD_GENL_PACKET
+KBUILD_EXTRA_SYMBOLS += /opt/genl_packet/Module.symvers
+endif
 
 # BCM Network Device
 
